--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "class-variance-authority": "^0.4.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.10.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
