--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "class-variance-authority": "^0.4.0",
+    "framer-motion": "^9.1.7",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
