--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^2.9.11",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -17,8 +19,11 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.5",
     "tailwind-merge": "^1.10.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "wretch": "^2.5.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
