--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
+    "analyze": "cross-env ANALYZE=true npm run build",
     "start": "next start"
   },
   "dependencies": {
@@ -27,7 +28,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "cross-env": "^7.0.3",
     "cssnano": "^5.1.15",
+    "next-bundle-analyzer": "^0.6.7",
+    "next-compose-plugins": "^2.2.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
