Add bloging pages

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "my-app",
+  "name": "commit-rocket-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
-    "analyze": "cross-env ANALYZE=true npm run build"
+    "build": "next build",
+    "analyze:build": "cross-env ANALYZE=true npm run build",
+    "analyze:dev": "cross-env ANALYZE=true npm run dev",
+    "script:gen-articles-index": "node ./scripts/generateArticlesIndex.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
@@ -18,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
+    "string-strip-html": "^13.2.1",
     "sweetalert2": "^11.4.8",
     "sweetalert2-react-content": "^5.0.7",
     "tailwind-merge": "^1.10.0",
