--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "script:gen-articles-index": "node ./scripts/generateArticlesIndex.js"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.16",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.9.11",
