Add opengraph and other metatags

--- a/example.env
+++ b/example.env
@@ -1,2 +1,6 @@
+# Application urls
 NEXT_PUBLIC_BACKEND_URL=https://backend.commitrocket.com
+NEXT_PUBLIC_FRONTEND_URL=https://www.commitrocket.com
+
+# Google analytics 
 NEXT_PUBLIC_GOOGLE_ANALYTICS_TAG_ID= [[ SOME GOOGLE ANALYTICS TAG ID]]
