--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^2.9.11",
     "class-variance-authority": "^0.4.0",
     "framer-motion": "^9.1.7",
+    "linkedom": "^0.14.25",
     "next": "13.2.4",
     "nextjs-google-analytics": "^2.3.3",
     "react": "18.2.0",
