--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Make .env file
-        run: ${{ steps.detect-package-manager.outputs.manager }} run --silent env > .env.local
+        run: ${{ steps.detect-package-manager.outputs.manager }} run --silent env > .env && ls
       - name: Build and statically render nextjs with Next.js
         run: ${{ steps.detect-package-manager.outputs.manager }} run build
       - run: echo '' > ./out/_next/.nojekyll
