--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -58,6 +58,8 @@ jobs:
           echo NEXT_PUBLIC_BACKEND_URL=${{ vars.BACKEND_URL }} >> .env
           echo NEXT_PUBLIC_FRONTEND_URL=${{ vars.FRONTEND_URL }} >> .env
           echo NEXT_PUBLIC_GOOGLE_ANALYTICS_TAG_ID=${{ vars.GOOGLE_ANALYTICS_TAG_ID }} >> .env
+          ls
+          cat .env
       - name: Build and statically render nextjs with Next.js
         run: ${{ steps.detect-package-manager.outputs.manager }} run build
       - run: echo '' > ./out/_next/.nojekyll
