--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -52,13 +52,11 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-      - name: Make .env fil
-        uses: SpicyPizza/create-envfile@v1
-        with:
-          envkey_NEXT_PUBLIC_BACKEND_URL: ${{ vars.BACKEND_URL }}
-          envkey_NEXT_PUBLIC_FRONTEND_URL: ${{ vars.FRONTEND_URL }}
-          envkey_NEXT_PUBLIC_GOOGLE_ANALYTICS_TAG_ID: ${{ vars.GOOGLE_ANALYTICS_TAG_ID }}
-          fail_on_empty: true
+      - name: Make .env file
+        run: |
+          echo ${{ vars.DOTENV }} >> .env
+          ls -a
+          cat .env
       - name: Build and statically render nextjs with Next.js
         run: ${{ steps.detect-package-manager.outputs.manager }} run build
       - run: echo '' > ./out/_next/.nojekyll
