--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -54,7 +54,9 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Make .env file
         run: |
-          echo ${{ vars.DOTENV }} >> .env
+          echo NEXT_PUBLIC_BACKEND_URL=${{ vars.NEXT_PUBLIC_BACKEND_URL }} >> .env
+          echo NEXT_PUBLIC_FRONTEND_URL=${{ vars.NEXT_PUBLIC_FRONTEND_URL }} >> .env
+          echo NEXT_PUBLIC_GOOGLE_ANALYTICS_TAG_ID=${{ vars.NEXT_PUBLIC_GOOGLE_ANALYTICS_TAG_ID }} >> .env
           ls -a
           cat .env
       - name: Build and statically render nextjs with Next.js
