Make articles JSX for text wrapping

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.d.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "src/assets/state/articles/*.jsx"
   ],
   "exclude": [
     "node_modules"
