--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -25,9 +25,9 @@ jobs:
         id: detect-package-manager
         run: |
           if [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "::set-output name=manager::npm"
-            echo "::set-output name=command::ci"
-            echo "::set-output name=runner::npx --no-install"
+            echo "name=manager::npm" >> $GITHUB_OUTPUT
+            echo "name=command::ci" >> $GITHUB_OUTPUT
+            echo "name=runner::npx --no-install" >> $GITHUB_OUTPUT
             exit 0
           else
             echo "Unable to determine packager manager"
