--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -25,9 +25,9 @@ jobs:
         id: detect-package-manager
         run: |
           if [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "name=manager::npm" >> $GITHUB_OUTPUT
-            echo "name=command::ci" >> $GITHUB_OUTPUT
-            echo "name=runner::npx --no-install" >> $GITHUB_OUTPUT
+            echo "manager=npm" >> $GITHUB_OUTPUT
+            echo "command=ci" >> $GITHUB_OUTPUT
+            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
             exit 0
           else
             echo "Unable to determine packager manager"
